--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preact-util",
-  "description": "A nice boilerplate with unit tests, linting and code coverage.",
-  "version": "1.4.14",
+  "description": "A utility for preact apps.",
+  "version": "1.4.15",
   "homepage": "https://github.com/5orenso/preact-util",
   "repository": {
     "type": "git",
