--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preact-util",
   "description": "A utility for preact apps.",
-  "version": "1.4.72",
+  "version": "1.5.0",
   "homepage": "https://github.com/5orenso/preact-util",
   "repository": {
     "type": "git",
@@ -27,6 +27,9 @@
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
